--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,15 +4,20 @@
   "private": true,
   "proxy": "http://kraken.cs.toronto.edu/",
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/data-grid": "^4.0.0-alpha.20",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.57",
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@mui/core": "^5.0.0-alpha.54",
+    "@mui/icons-material": "^5.5.0",
+    "@mui/material": "^5.5.0",
+    "@mui/x-data-grid": "^5.6.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "add": "^2.0.6",
+    "babel-preset-jest": "^27.5.1",
     "danfojs": "^0.2.3",
     "ketcher-react": "^2.1.0",
+    "ketcher-standalone": "^1.3.1",
     "ngl": "^0.10.4",
     "plotly.js": "^1.58.4",
     "react": "^17.0.1",
@@ -24,13 +29,15 @@
     "reactour": "^1.18.3",
     "smiles-drawer": "^1.2.0",
     "styled-components": "^5.2.1",
-    "typescript": "^4.1.5",
+    "type-fest": "^0.13.1",
+    "typescript": "^3.2.1",
     "victory": "^35.4.6",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "yarn": "^1.22.17"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts --max_old_space_size=4096 build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
