--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,19 @@
 version: "3.3"
 services:
   
-  nginx:
-    image: 'phosphines-nginx:latest'
-    build:
-      context: .
-      dockerfile: nginx.dockerfile
-    ports:
-      - "80:80"
-
   database:
-    image: 'phosphines-database:latest'
-    build:
-      context: ./backend
-      dockerfile: database.dockerfile
+    image: 'mcs07/postgres-rdkit'
+    container_name: database
     shm_size: '4gb'
     ports:
       - "5432:5432"
     volumes:
-      - "./data:/var/lib/postgresql/data"
+      - "kraken-postgres:/var/lib/postgresql/data"
+      - "pr3:/home/db"
     environment:
       POSTGRES_HOST_AUTH_METHOD: trust
+      POSTGRES_DB: postgres
+
 
   backend:
     image: 'phosphines-backend:latest'
@@ -28,14 +21,21 @@ services:
       context: ./backend
       dockerfile: backend.dockerfile
     ports:
-      - "8080:80"
+      - "80:8080"
     environment:
       POSTGRES_SERVER: database
       POSTGRES_USER: postgres
-      POSTGRES_PASSWD: ''
-      POSTGRES_DB: phosphines
+      POSTGRES_PASSWD: 'password'
+      POSTGRES_DB: postgres
+    entrypoint: bash prestart.sh
       
   cdk-depict:
     image: 'simolecule/cdkdepict:1.3'
     ports:
       - "8081:8080"
+
+volumes:
+  kraken-postgres:
+      external: true
+  pr3:
+      external: true
