mount python code to docker container
allows for development work in Python code

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
       dockerfile: backend.dockerfile
     ports:
       - "80:8080"
+    volumes:
+      - "./backend/app:/app"
     environment:
       POSTGRES_SERVER: database
       POSTGRES_USER: postgres
