--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,42 +2,22 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://kraken.cs.toronto.edu/",
   "dependencies": {
-    "@emotion/react": "^11.8.1",
-    "@emotion/styled": "^11.8.1",
-    "@mui/core": "^5.0.0-alpha.54",
-    "@mui/icons-material": "^5.5.0",
-    "@mui/material": "^5.5.0",
-    "@mui/x-data-grid": "^5.6.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "add": "^2.0.6",
-    "babel-preset-jest": "^27.5.1",
-    "danfojs": "^0.2.3",
-    "ketcher-react": "^2.1.0",
-    "ketcher-standalone": "^1.3.1",
-    "ngl": "^0.10.4",
-    "plotly.js": "^1.58.4",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-ngl": "^0.2.1",
-    "react-plotly.js": "^2.5.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
-    "reactour": "^1.18.3",
-    "smiles-drawer": "^1.2.0",
-    "styled-components": "^5.2.1",
-    "type-fest": "^0.13.1",
-    "typescript": "^3.2.1",
-    "victory": "^35.4.6",
-    "web-vitals": "^0.2.4",
-    "yarn": "^1.22.17"
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.3",
+    "@mui/material": "^5.10.5",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^13.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts --max_old_space_size=4096 build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
