--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,32 @@
-version: "3.3"
-services:
+version: '3'
 
-  frontend:
-    image: 'phosphines-frontend:latest'
-    volumes:
-      - "./frontend:/app"
-    build:
-      context: .
-      dockerfile: frontend.dockerfile
+services:
+  reverse-proxy:
+    # The official v2 Traefik docker image
+    image: traefik:v2.8
+    # Enables the web UI and tells Traefik to listen to docker
+    command: 
+      - --api.insecure=true 
+      - --api.dashboard=true
+      - --api.debug=true
+      - --providers.docker
+      - --entrypoints.web.address=:80
     ports:
-      - "80:3000"
-    entrypoint: npm start
-  
+      # The HTTP port
+      - "80:80"
+      # The Web UI (enabled by --api.insecure=true)
+      - "8080:8080"
+      #
+    volumes:
+      # So that Traefik can listen to the Docker events
+      - /var/run/docker.sock:/var/run/docker.sock
+    networks:
+      - web
+      - db
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.api.service=api@internal"
+
   database:
     image: 'mcs07/postgres-rdkit'
     container_name: database
@@ -24,15 +39,14 @@ services:
     environment:
       POSTGRES_HOST_AUTH_METHOD: trust
       POSTGRES_DB: postgres
-
+    networks:
+      - db
 
   backend:
     image: 'phosphines-backend:latest'
     build:
       context: ./backend
       dockerfile: backend.dockerfile
-    ports:
-      - "81:8080"
     volumes:
       - "./backend/app:/app"
     environment:
@@ -41,11 +55,41 @@ services:
       POSTGRES_PASSWD: 'password'
       POSTGRES_DB: postgres
     entrypoint: bash prestart.sh
-      
+    networks:
+      - web
+      - db
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.backend.rule=Host(`localhost`) || Host(`147.182.187.35`)"
+      - "traefik.http.services.backend.loadbalancer.server.port=8080"
+
   cdk-depict:
     image: 'simolecule/cdkdepict:1.3'
-    ports:
-      - "8081:8080"
+    networks:
+      - web
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.cdk-depict.rule=Host(`localhost`) || Host(`147.182.187.35`)" 
+      - "traefik.http.services.cdk-depict.loadbalancer.server.port=8080"
+
+  frontend:
+    image: 'phosphines-frontend:latest'
+    volumes:
+      - "./frontend:/app"
+    build:
+      context: .
+      dockerfile: frontend.dockerfile
+    networks:
+      - web
+    entrypoint: npm start
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.frontend.rule=Host(`localhost`) || Host(`147.182.187.35`)"
+      - "traefik.http.services.frontend.loadbalancer.server.port=3000"
+
+networks:
+  web:
+  db:
 
 volumes:
   kraken-postgres:
