--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,7 +60,7 @@ services:
       - db
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.backend.rule=Host(`localhost`) || Host(`147.182.187.35`)"
+      - "traefik.http.routers.backend.rule=Host(`localhost`) && PathPrefix(`/api`, `/docs`) || Host(`147.182.187.35`) && PathPrefix(`/api`, `/docs`)"
       - "traefik.http.services.backend.loadbalancer.server.port=8080"
 
   cdk-depict:
@@ -69,13 +69,13 @@ services:
       - web
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.cdk-depict.rule=Host(`localhost`) || Host(`147.182.187.35`)" 
-      - "traefik.http.services.cdk-depict.loadbalancer.server.port=8080"
 
   frontend:
     image: 'phosphines-frontend:latest'
     volumes:
       - "./frontend:/app"
+    ports:
+      - "3000:3000"
     build:
       context: .
       dockerfile: frontend.dockerfile
