--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,13 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "cors": "^2.8.5",
+    "ketcher-core": "^1.5.1",
+    "ketcher-react": "^2.5.2",
+    "ketcher-standalone": "^1.4.1",
+    "miew": "^0.10.1",
     "plotly.js": "^2.14.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "^5.0.1",
