adds reverse proxy to testing services

--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -33,6 +33,7 @@ jobs:
         services: |
           test_database
           test_backend
+          test_reverse-proxy
 
     - name: populate db
       # conda setup requires this special shell
