--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,31 +2,37 @@ version: '3'
 
 services:
   reverse-proxy:
-    # The official v2 Traefik docker image
-    image: traefik:v2.8
-    # Enables the web UI and tells Traefik to listen to docker
+    image: traefik:v2.9
     container_name: reverse_proxy
-    command: 
-      - --api.insecure=true 
-      - --api.dashboard=true
-      - --api.debug=true
+    command:
+      - --api.insecure=true
       - --providers.docker
+      - --providers.docker.exposedByDefault=false
       - --entrypoints.web.address=:80
+
+      # Uncomment below for SSL
+      - --entrypoints.web.http.redirections.entrypoint.to=websecure
+      - --entrypoints.web.http.redirections.entrypoint.scheme=https
+      - --entrypoints.websecure.address=:443
+      - --entrypoints.websecure.http.tls=true
+      - --certificatesresolvers.le.acme.email=janash@vt.edu
+      - --certificatesresolvers.le.acme.storage=acme.json
+      - --certificatesresolvers.le.acme.httpchallenge.entrypoint=web
+      - --certificatesResolvers.le.acme.storage=/acme/acme.json
     ports:
-      # The HTTP port
       - "80:80"
-      # The Web UI (enabled by --api.insecure=true)
+      - "443:443"
       - "8080:8080"
-      #
     volumes:
-      # So that Traefik can listen to the Docker events
       - /var/run/docker.sock:/var/run/docker.sock
+      - ./acme:/acme
     networks:
       - web
       - db
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.api.service=api@internal"
+
 
   database:
     image: 'mcs07/postgres-rdkit'
@@ -46,6 +52,8 @@ services:
   backend:
     image: 'phosphines-backend:latest'
     container_name: backend
+    depends_on:
+      - database
     build:
       context: ./backend
       dockerfile: backend.dockerfile
@@ -54,7 +62,7 @@ services:
     environment:
       POSTGRES_SERVER: database
       POSTGRES_USER: postgres
-      POSTGRES_PASSWD: $POSTGRES_PWD
+      POSTGRES_PASSWD: $postgresPWD
       POSTGRES_DB: postgres
     entrypoint: bash prestart.sh
     networks:
@@ -62,8 +70,10 @@ services:
       - db
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.backend.rule=Host(`localhost`) && PathPrefix(`/api`) || Host(`147.182.187.35`) && PathPrefix(`/api`)"
+      - "traefik.http.routers.backend.rule=Host(`kraken.molssi.org`) && PathPrefix(`/api`)"
       - "traefik.http.services.backend.loadbalancer.server.port=8080"
+      - "traefik.http.routers.backend.tls=true"
+      - "traefik.http.routers.backend.tls.certresolver=le"
 
   cdk-depict:
     image: 'simolecule/cdkdepict:latest'
@@ -72,7 +82,9 @@ services:
       - web
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.cdk-depict.rule=Host(`localhost`) && PathPrefix(`/depict`) || Host(`147.182.187.35`) && PathPrefix(`/depict`)"
+      - "traefik.http.routers.cdk-depict.rule=Host(`kraken.molssi.org`) && PathPrefix(`/depict`)"
+      - "traefik.http.routers.cdk-depict.tls=true"
+      - "traefik.http.routers.cdk-depict.tls.certresolver=le"
 
   frontend:
     image: 'phosphines-frontend:latest'
@@ -87,8 +99,10 @@ services:
     entrypoint: npm start
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.frontend.rule=Host(`localhost`) || Host(`147.182.187.35`)"
+      - "traefik.http.routers.frontend.rule=Host(`kraken.molssi.org`)"
       - "traefik.http.services.frontend.loadbalancer.server.port=3000"
+      - "traefik.http.routers.frontend.tls=true"
+      - "traefik.http.routers.frontend.tls.certresolver=le"
 
   documentation:
     image: "phosphines-docs:latest"
@@ -103,9 +117,10 @@ services:
       - web
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.documentation.rule=Host(`localhost`) && PathPrefix(`/docs`) || Host(`147.182.187.35`) && PathPrefix(`/docs`)"
+      - "traefik.http.routers.documentation.rule=Host(`kraken.molssi.org`) && PathPrefix(`/docs`)"
       - "traefik.http.services.documentation.loadbalancer.server.port=5000"
-    
+      - "traefik.http.routers.documentation.tls=true"
+      - "traefik.http.routers.documentation.tls.certresolver=le"    
 
 networks:
   web:
