update frontend manifest

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "kraken app",
+  "name": "Kolossal viRtual dAtabase for moleKular dEscriptors of orgaNophosphorus ligands (kraken)",
   "icons": [
     {
       "src": "favicon.ico",
