--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "plotly.js": "^2.14.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-ngl": "^0.2.3",
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "^5.0.1",
