--- a/.gitignore
+++ b/.gitignore
@@ -439,7 +439,8 @@ buck-out/
 # General
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 
@@ -583,5 +584,8 @@ tags
 
 # Coc configuration directory
 .vim
+
+# Ignoring local yml file
+docker-compose.local.yml
 
 # End of https://www.gitignore.io/api/osx,vim,react,linux,macos,python,pycharm,reactnative,sublimetext
