start switch to vite

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,16 +13,17 @@
     "@testing-library/user-event": "^13.2.1",
     "cors": "^2.8.5",
     "ketcher-core": "^2.8.0",
-    "ketcher-react": "^2.8.0",
+    "ketcher-react": "^2.10.0",
     "ketcher-standalone": "^2.8.0",
     "miew": "^0.10.1",
+    "ngl": "^2.1.1",
     "plotly.js": "^2.14.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-ngl": "^0.2.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "^5.0.1",
+    "serve": "^14.2.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
