--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,10 +27,11 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build --max_old_space_size=4096 build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "vite build",
+    "preview": "vite preview --port 3000",
+    "serve": "serve -s dist -l 3000",
+    "build-and-preview": "vite build && vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -49,5 +50,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.0.2",
+    "vite": "^4.4.2",
+    "vite-plugin-node-polyfills": "^0.9.0",
+    "vite-plugin-svgr": "^3.2.0",
+    "vite-tsconfig-paths": "^4.2.0"
   }
 }
