start generalization of front-end Home page

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,6 +89,7 @@ services:
     container_name: frontend
     volumes:
       - "./frontend/src:/app/src"
+      - "./frontend/public/stats:/app/public/stats"
     build:
       context: .
       dockerfile: frontend.production.dockerfile
