--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "cors": "^2.8.5",
+    "dompurify": "^3.0.8",
     "ketcher-core": "^2.8.0",
     "ketcher-react": "^2.10.0",
     "ketcher-standalone": "^2.8.0",
@@ -20,6 +21,7 @@
     "plotly.js": "^2.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "^5.0.1",
